feat(ui): テーマ切り替え機能とモバイル対応の追加、およびUI調整
- 設定画面にテーマカラー変更機能を追加（プレビュー・キャンセル対応）
- モバイルデバイス向けのレスポンシブレイアウトを実装
- 中央の結果表示エリアのサイズとフォントサイズを調整

--- a/index.html
+++ b/index.html
@@ -126,7 +126,19 @@
                         <option value="medium">Medium</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="theme-select">Theme Color</label>
+                    <select id="theme-select">
+                        <option value="orange">Orange (Default)</option>
+                        <option value="blue">Blue</option>
+                        <option value="green">Green</option>
+                        <option value="purple">Purple</option>
+                        <option value="red">Red</option>
+                    </select>
+                </div>
                 <div class="modal-actions">
+                    <button type="button" id="cancel-settings"
+                        style="border-color: var(--dim-color); color: #888; margin-right: 10px;">CANCEL</button>
                     <button type="submit" id="save-settings">SAVE & CLOSE</button>
                 </div>
             </form>
