feat(phase3): 履歴管理機能の実装と議論モードの改善
- 議論ログの履歴保存・閲覧・削除機能を追加
- クリップボードへのコピー機能とセッションリセット機能を追加
- 議論モードの回答順序をCore ID順に固定
- カスタムペルソナ使用時もMAGIシステム名(MELCHIOR等)を付与
- エクスポート機能のバグ修正とトピック保持の改善

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <h1>MAGI SYSTEM</h1>
             <div class="status-bar">
                 <span id="system-status">SYSTEM: STANDBY</span>
+                <button id="reset-btn"
+                    style="margin-right: 10px; border-color: var(--deny-color); color: var(--deny-color);">RESET</button>
                 <button id="mute-btn" style="margin-right: 10px;">SOUND: ON</button>
                 <button id="settings-btn">SETTINGS</button>
             </div>
@@ -117,6 +119,7 @@
             <div class="tabs">
                 <button class="tab-btn active" data-tab="general-settings">GENERAL</button>
                 <button class="tab-btn" data-tab="custom-personas">PERSONAS</button>
+                <button class="tab-btn" data-tab="history-tab">HISTORY</button>
             </div>
 
             <div id="general-settings" class="tab-content active">
@@ -191,6 +194,16 @@
                     <button type="button" id="add-persona-btn">ADD PERSONA</button>
                 </div>
             </div>
+
+            <div id="history-tab" class="tab-content">
+                <div class="history-list" id="history-list">
+                    <!-- History items will be injected here -->
+                </div>
+                <div class="modal-actions" style="margin-top: 20px;">
+                    <button type="button" id="clear-history-btn"
+                        style="border-color: var(--deny-color); color: var(--deny-color);">CLEAR ALL HISTORY</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -200,6 +213,7 @@
             <div class="discussion-header">
                 <span class="blink"> >> CONFERENCE MODE ACTIVE << </span>
                         <div style="display: flex; gap: 10px;">
+                            <button id="copy-discussion" style="font-size: 0.8rem; padding: 2px 10px;">COPY</button>
                             <button id="export-discussion" style="font-size: 0.8rem; padding: 2px 10px;">EXPORT</button>
                             <button id="close-discussion">MINIMIZE</button>
                         </div>
