feat: モバイル対応の強化とVercelデプロイ構成の追加
モバイルデバイスでの表示レイアウトと操作性を最適化しました。
また、セキュリティ向上のため、OpenAI APIの呼び出しをクライアント側から
Vercel Serverless Function経由に変更し、APIキーを隠蔽しました。

主な変更点:
- モバイル用レスポンシブデザインの調整 (CSS/HTML)
- Vercel Edge Function (api/analyze.js) の作成
- プロジェクト構成ファイル (package.json) の追加
- クライアント側でのAPIキー管理ロジックの削除
- デプロイ手順書 (DEPLOY.md) の追加

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
     <title>MAGI System - AI Consensus Review</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -103,10 +103,11 @@
                             <span class="mode-indicator"></span>
                         </label>
                     </div>
+                    <button id="random-persona-btn" class="mobile-only-btn">RND</button>
                 </div>
             </div>
-            <div class="random-controls" style="text-align: center; margin-top: 10px;">
-                <button id="random-persona-btn">RANDOMIZE PERSONAS</button>
+            <div class="random-controls desktop-only" style="text-align: center; margin-top: 10px;">
+                <button id="random-persona-btn-desktop">RANDOMIZE PERSONAS</button>
             </div>
         </main>
     </div>
@@ -127,11 +128,7 @@
                     <!-- Hidden username field for accessibility/password manager support -->
                     <input type="text" name="username" autocomplete="username" style="display:none;">
 
-                    <div class="form-group">
-                        <label for="api-key">OpenAI API Key</label>
-                        <input type="password" id="api-key" placeholder="sk-..." autocomplete="current-password">
-                        <p class="note">※キーはブラウザ内にのみ保存されます</p>
-                    </div>
+                    <!-- API Key field removed -->
                     <div class="form-group">
                         <label for="model-select">Model</label>
                         <select id="model-select">
