--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             <h1>MAGI SYSTEM</h1>
             <div class="status-bar">
                 <span id="system-status">SYSTEM: STANDBY</span>
-                <button id="reset-btn"
-                    style="margin-right: 10px; border-color: var(--deny-color); color: var(--deny-color);">RESET</button>
-                <button id="mute-btn" style="margin-right: 10px;">SOUND: ON</button>
-                <button id="settings-btn">SETTINGS</button>
+                <div class="header-buttons">
+                    <button id="reset-btn"
+                        style="border-color: var(--deny-color); color: var(--deny-color);">RESET</button>
+                    <button id="mute-btn">SOUND: ON</button>
+                    <button id="settings-btn">SETTINGS</button>
+                </div>
             </div>
         </header>
 
@@ -216,12 +218,21 @@
     <div id="discussion-overlay" class="discussion-overlay">
         <div class="discussion-window">
             <div class="discussion-header">
-                <span class="blink"> >> CONFERENCE MODE ACTIVE << </span>
+                <span class="blink"> >> DISCUSSION MODE << </span>
                         <div style="display: flex; gap: 10px;">
                             <button id="copy-discussion" style="font-size: 0.8rem; padding: 2px 10px;">COPY</button>
                             <button id="export-discussion" style="font-size: 0.8rem; padding: 2px 10px;">EXPORT</button>
-                            <button id="close-discussion">MINIMIZE</button>
+                            <button id="close-discussion">MIN</button>
                         </div>
+            </div>
+            <div class="step-flow-container" id="step-flow">
+                <div class="step-node" id="step-1">1. ANALYSIS</div>
+                <div class="step-line" id="line-1"></div>
+                <div class="step-node" id="step-2">2. REVIEW</div>
+                <div class="step-line" id="line-2"></div>
+                <div class="step-node" id="step-3">3. JUDGMENT</div>
+                <div class="step-line" id="line-3"></div>
+                <div class="step-node" id="step-4">4. REPORT</div>
             </div>
             <div class="discussion-timeline" id="discussion-timeline">
                 <!-- Messages go here -->
@@ -232,6 +243,18 @@
                     style="display: none; width: 100%; padding: 10px; background: rgba(0,0,0,0.8); border: 1px solid var(--main-color); color: var(--main-color); cursor: pointer; font-weight: bold; letter-spacing: 2px;">
                     PROCEED TO NEXT PHASE >>
                 </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Custom Dialog (Alert/Confirm) -->
+    <div id="custom-dialog" class="custom-dialog-overlay" style="display: none;">
+        <div class="custom-dialog-box">
+            <div class="custom-dialog-header">SYSTEM NOTIFICATION</div>
+            <div class="custom-dialog-content" id="custom-dialog-message"></div>
+            <div class="custom-dialog-buttons">
+                <button id="custom-dialog-cancel" class="dialog-btn cancel">CANCEL</button>
+                <button id="custom-dialog-ok" class="dialog-btn ok">OK</button>
             </div>
         </div>
     </div>
